added more pleas

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <div><p>This is insane</p></div>
+    <div>
+        <h1>When Lost in the Woods</h1>
+        <p>somebody learn me something about this</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
